# MailAppliation-exam

./: AttachmentMail.cpp  AttachmentMail.h  CMakeLists.txt  FilterNoSpam.cpp  FilterNoSpam.h  HTMLMail.cpp  HTMLMail.h  Mail.cpp  Mail.h  MailApplication.cpp  MailApplication.h  PlainMail.cpp  PlainMail.h  main.cpp  run.sh
